--- a/ess/page.css
+++ b/ess/page.css
@@ -6,7 +6,7 @@
 .welcome{
     height: 100vh;
     background-color: #F5F5F5;
-    background-image: url(/img/wave.svg);
+    background-image: url(/img/wav.svg);
     background-position: bottom;
     background-repeat: no-repeat;
 }
