--- a/ess/page.css
+++ b/ess/page.css
@@ -1,300 +1,274 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.welcome{
-    height: 100vh;
-    background-color: #F5F5F5;
-    background-image: url(/img/wav.svg);
-    background-position: bottom;
-    background-repeat: no-repeat;
+.welcome {
+  height: 100vh;
+  background-color: #f5f5f5;
+  background-image: url(/img/wav.svg);
+  background-position: bottom;
+  background-repeat: no-repeat; 
 }
 
-.nav-bar{
-    display: flex;
-    justify-content: space-around;
-    height: 60px;
-    align-items: center;
+.nav-bar {
+  display: flex;
+  justify-content: space-around;
+  height: 60px;
+  align-items: center;
 }
 
-.real > h1{
-    font-family: "Circular", sans-serif;
-    font-weight: 700;
+.real > h1 {
+  font-family: "Circular", sans-serif;
+  font-weight: 700;
 }
 
-.tab{ 
-    border-radius: 8px;
-    background-color: #00C1D4;
-    padding:    2px 8px;
-    display: flex;
-    justify-content: center;
-    margin-top: 6.5px;
+.tab {
+  border-radius: 8px;
+  background-color: #00c1d4;
+  padding: 2px 8px;
+  display: flex;
+  justify-content: center;
+  margin-top: 6.5px;
 }
 
-.select{
-    width: 250px;
-    outline: none;
-    border: none;
-    background-color: #0099ff;
+.select {
+  width: 250px;
+  outline: none;
+  border: none;
+  background-color: #0099ff;
 }
 
-.select::placeholder{
-    color: #FFF;
+.select::placeholder {
+  color: #fff;
 }
 
-.imgs{
-    margin-top: 4px;
+.imgs {
+  margin-top: 4px;
 }
 
-.list{
-    display: flex;
-    margin-left: 150px;
-    font-family: "circular", sans-serif;
-    font-weight: 700;
+.list {
+  display: flex;
+  margin-left: 150px;
+  font-family: "circular", sans-serif;
+  font-weight: 700;
 }
 
-.ul{
-    width: 80px;
-    display: flex;
-    justify-content: space-around;
+.ul {
+  width: 80px;
+  display: flex;
+  justify-content: space-around;
 }
 
-.ul > a{
-    text-decoration: none;
-    color: #000;
-    transition: 0.4s all;
+.ul > a {
+  text-decoration: none;
+  color: #000;
+  transition: 0.4s all;
 }
 
-.ul > a:hover{
-    color: #0099ff;
+.ul > a:hover {
+  color: #0099ff;
 }
 
-.pap{
-    margin-top: 2px;
+.pap {
+  margin-top: 2px;
 }
 
-.subscribe{
-    margin-left: 280px;
-    display: flex;
-    border-radius: 4px;
-    padding: 3px;
-    background-color: #F5F5F5;
-    border: 1px solid;
+.subscribe {
+  margin-left: 280px;
+  display: flex;
+  border-radius: 4px;
+  padding: 3px;
+  background-color: #f5f5f5;
+  border: 1px solid;
 }
 
-.letter{
-    width: 300px;
-    padding: 5px;
-    outline: none;
-    background-color: #F5F5F5;
-    border: none;
+.letter {
+  width: 300px;
+  padding: 5px;
+  outline: none;
+  background-color: #f5f5f5;
+  border: none;
 }
 
-.alert{
-    margin-left: 40px;
-    font-family: "ROBOTO", sans-serif;
+.alert {
+  margin-left: 40px;
+  font-family: "ROBOTO", sans-serif;
 }
 
-.learn{
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-family: "Circular", sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
+.learn {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: "Circular", sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.learn > h1{
-    font-size: 40px;
+.learn > h1 {
+  font-size: 40px;
 }
 
-.learn > p{
-    font-family: "ROBOTO", sans-serif;
+.learn > p {
+  font-family: "ROBOTO", sans-serif;
 }
 
-.opensource{
-    position: absolute;
-    top: 98%;
-    left: 50%;
-    transform: translate(-50%, -98%);
-    color: #fff;
+.opensource {
+  position: absolute;
+  top: 98%;
+  left: 50%;
+  transform: translate(-50%, -98%);
+  color: #fff;
 }
 
-.opensource > p{
-    font-family: "roboto", sans-serif;
+.opensource > p {
+  font-family: "roboto", sans-serif;
 }
 
-.opensource > p > span{
-    color: red;
+.opensource > p > span {
+  color: red;
 }
 
 /* language*/
 
-
-
-
-.reche{
-    background-color: #0099ff;
-    text-decoration: none;
-    color: #FFF;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-top: 50px;
-    padding: 7px 10px;
-    box-shadow: 0 0 30px -13px;
-    border-radius: 4px;
-    z-index: -1;
+.reche {
+  background-color: #0099ff;
+  text-decoration: none;
+  color: #fff;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 50px;
+  padding: 7px 10px;
+  box-shadow: 0 0 30px -13px;
+  border-radius: 4px;
+  z-index: -1;
 }
 
 /**/
 
-
-.cont{
-    margin-top: 5px;
+.cont {
+  margin-top: 5px;
 }
 
-.choose{
-    font-family: 'roboto', sans-serif;
-    background-color: #0099ff;
-    padding: 5px 10px;
-    width: 200px;
-    color: #FFF;
-    margin-bottom: 7px;
-    border-radius: 6px;  
-    
+.choose {
+  font-family: "roboto", sans-serif;
+  background-color: #0099ff;
+  padding: 5px 10px;
+  width: 200px;
+  color: #fff;
+  margin-bottom: 7px;
+  border-radius: 6px;
 }
 
-.rono > p{
-    font-family: 'roboto', sans-serif;
-    background-color: #0099ff;
-    padding: 5px 10px;
-    width: 200px;
-    color: #FFF;
-    margin-bottom: 7px;
-    border-radius: 6px; 
+.rono > p {
+  font-family: "roboto", sans-serif;
+  background-color: #0099ff;
+  padding: 5px 10px;
+  width: 200px;
+  color: #fff;
+  margin-bottom: 7px;
+  border-radius: 6px;
+  text-align: center;
+}
+
+.rono {
+  display: flex;
+  flex-direction: column;
+}
+
+.choose::after {
+  content: "";
+  background: url("/img/chevron-down-outline.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: absolute;
+  right: 205px;
+  height: 10%;
+  width: 20px;
+  top: 76px;
+  cursor: pointer;
+  transition: 0.3s all;
+}
+
+.rono .rini.activy + .choose::after {
+  transform: rotatex(180deg);
+  top: 68px;
+}
+
+.rini::-webkit-scrollbar {
+  width: 8px;
+  background: #0099ff;
+  border-radius: 0 8px 8px 0;
+}
+
+.rini::-webkit-scrollbar-thumb {
+  background: #39adfad5;
+  border-radius: 8px;
+}
+
+.rini.activy {
+  visibility: visible;
+}
+
+.rini {
+  background-color: #0099ff;
+  border-radius: 6px;
+  visibility: hidden;
+  height: 150px;
+  overflow-y: scroll;
+  order: 1;
+}
+
+.fields {
+  display: flex;
+  align-items: center;
+  font-family: "roboto", sans-serif;
+  background-color: #0099ff;
+  color: #fff;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.mi > label > p {
+  cursor: pointer;
+}
+
+.fields > input {
+  display: none;
+}
+
+.fields:hover {
+  background-color: #32adffd5;
+  border-radius: 4px;
+}
+
+@media (max-width: 1000px) {
+  .learn > h1 {
+    font-size: 30px;
+    align-items: center;
     text-align: center;
-}
+  }
 
-.rono{
-    display: flex;
-    flex-direction: column;
-}
+  .learn > p {
+    font-family: "ROBOTO", sans-serif;
+    align-items: center;
+    text-align: center;
+  }
 
-.choose::after{
-    content: '';
-    background: url('/img/chevron-down-outline.svg');
+  .choose::after {
+    content: "";
+    background: url("/img/chevron-down-outline.svg");
     background-repeat: no-repeat;
     background-size: contain;
     position: absolute;
-    right: 205px;
+    right: 40px;
     height: 10%;
     width: 20px;
-    top: 76px;
+    top: 119px;
     cursor: pointer;
-    transition: 0.3s all;
+    transition: 0.4s all;
+  }
 }
-
-.rono .rini.activy + .choose::after{
-    transform: rotatex(180deg);
-    top: 68px;
-}
-
-.rini::-webkit-scrollbar{
-    width: 8px;
-    background: #0099ff;
-    border-radius: 0 8px 8px 0;
-}
-
-.rini::-webkit-scrollbar-thumb{
-    background: #39adfad5;
-    border-radius: 8px;
-}
-
-.rini.activy{
-    visibility: visible;
-}
-
-.rini{
-    background-color: #0099ff;
-    border-radius: 6px;
-    visibility: hidden;
-    height: 150px;
-    overflow-y: scroll;
-    order: 1;
-    
-}
-
-
-.fields{
-    display: flex;
-    align-items: center;
-    font-family: "roboto", sans-serif;
-    background-color: #0099ff;
-    color: #FFF;
-    padding: 5px 10px;
-    cursor: pointer;
-}
-
-
-
-.mi > label > p{
-    cursor: pointer;
-}
-
-.fields > input{
-    display: none;
-}
-
-.fields:hover{
-    background-color: #32adffd5;
-    border-radius: 4px;
-}
-
-
-@media (max-width: 1000px) {
-    .learn > h1{
-        font-size: 30px;
-        align-items: center;
-        text-align: center;
-    }
-    
-    .learn > p{
-        font-family: "ROBOTO", sans-serif;
-        align-items: center;
-        text-align: center;
-    }
-
-    .choose::after{
-        content: '';
-        background: url('/img/chevron-down-outline.svg');
-        background-repeat: no-repeat;
-        background-size: contain;
-        position: absolute;
-        right: 40px;
-        height: 10%;
-        width: 20px;
-        top: 119px;
-        cursor: pointer;
-        transition: 0.4s all;
-    }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
