--- a/ess/page.css
+++ b/ess/page.css
@@ -6,9 +6,10 @@
 .welcome {
   height: 100vh;
   background-color: #f5f5f5;
-  background-image: url(/img/wav.svg);
+  background-image: url(/img/layered-waves-haikei\ \(1\).svg);
   background-position: bottom;
-  background-repeat: no-repeat; 
+  background-repeat: no-repeat;  
+  background-size: contain;
 }
 
 .nav-bar {
