--- a/ess/page.css
+++ b/ess/page.css
@@ -6,7 +6,7 @@
 .welcome {
   height: 100vh;
   background-color: #f5f5f5;
-  background-image: url(/img/layered-waves-haikei\ \(1\).svg);
+  background-image: url(/img/waves.svg);
   background-position: bottom;
   background-repeat: no-repeat;  
   background-size: contain;
@@ -24,14 +24,6 @@
   font-weight: 700;
 }
 
-.tab {
-  border-radius: 8px;
-  background-color: #00c1d4;
-  padding: 2px 8px;
-  display: flex;
-  justify-content: center;
-  margin-top: 6.5px;
-}
 
 .select {
   width: 250px;
